[package]
name = "eBay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
csv = "1.3.1"
derive = "1.0.0"
dunce = "1.0.5"
env_logger = "0.11.8"
fantoccini = "0.21.5"
features = "0.10.0"
log = "0.4.27"
reqwest = { version = "0.12.18", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.22"
which = "8.0.0"
