[package]
name = "ebay"
version = "0.1.0"
description = "ebay"
authors = ["rottedfm <rottedfm@proton.me>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
fantoccini = "0.22.0"
which = "8.0.0"
