[package]
name = "ebay"
version = "0.1.0"
description = "An example generated using the event-driven-async template"
authors = ["rotted"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
fantoccini = "0.22.0"
webdriver = "0.53.0"
log = "0.4.22"
env_logger = "0.11.5"
serde_json = "1.0.142"
serde = { version = "1.0", features = ["derive"] }
scraper = "0.20.0"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
tui-scrollview = "0.4.0"
